<resources>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="change_city">Change city</string>

    <string name="open_weather_maps_app_id">11111</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="api_key_openweathermap_org">a6e5ab0cba7b4ceb49c6482a3b8f955f</string>
    <string name="text_view_temp_min">min</string>
    <string name="text_view_temp_max">max</string>
    <string name="update_weather">update the weather</string>
    <string name="key_units">key_units</string>
    <string name="default_settings_units">standard</string>

    <string name="standard">standard</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>

    <string name="Kelvin">°K</string>
    <string name="Celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="dialog_title_units">Choose units</string>
    <string name="dialog_summary_units">Choose units for temperature</string>
    <string name="title_units">Units</string>
    <string name="button_search">Search</string>
    <string name="key_country">country_on</string>
    <string name="title_country">Сountry display</string>
    <string name="summary_country">When the parameter is enabled, the country will be displayed</string>
    <string name="temp_now">Temperature now</string>
    <string name="weather_channel_id">weather_channel_01</string>
    <string name="weather_char_sequence">Temperature now</string>
    <string name="weather_description">Temperature now</string>
</resources>